<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IconDiary Free</string>
    <string name="appid">icondiary</string>
    <string name="keymove">keymove</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="newrec">New</string>
    <string name="from">From</string>
    <string name="Addtodo">Add</string>
    <string name="Edittodo">Edit</string>
    <string name="spnmessage">Select</string>
    <string name="setting">Setting</string>
    <string name="todaytask">Today TASK</string>
    <string name="startbtn">Start</string>
    <string name="todaybtn">Today</string>
    <string name="title">Title</string>
    <string name="titleetc">Title(ShopName etc)</string>
    <string name="startweek">Start Week</string>
    <string name="startweeksummary">Start Week</string>
    <string name="jikan">Time</string>
    <string name="week">Week</string>
    <string name="clear">Clear</string>
    <string name="alarm">Alarm</string>
    <string name="prevdaybtn">＜</string>
    <string name="nextdaybtn">＞</string>
    <string name="todaydonebtn">Done</string>
    <string name="alldonebtn">All</string>
    <string name="canceldone">Cancel Done?</string>
    <string name="empty">No Memo</string>
    <string name="alldonemessage">can be handled in bulk for all</string>
    <string name="changemessage">Change?</string>
    <string name="touchsensitivity">Touch Sensitivity</string>
    <string name="touchsensitivitysummary">Adjustment Touch Sensitivity</string>
    <string name="thisplace">This Place</string>
    <string name="content">Memo</string>
    <string name="hiduke">Date</string>
    <string name="regist">Save</string>
    <string name="delete">Delete</string>
    <string name="savemessage">Save Data!</string>
    <string name="deleteMsg">Delete this Data?</string>
    <string name="deleteMsgRow">Delete this Row Data?</string>
    <string name="deleteMsgRowNo">Select Delete Row</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="moveMsg">Move this Data?</string>
    <string name="copyMsg">Copy this Data?</string>
    <string name="titlehidukefrom">"Date
From"</string>
    <string name="titlehiduketo">To</string>
    <string name="titlehiduke">Date</string>
    <string name="screen">Screen</string>
    <string name="screensummary">Specifies whether to rotate the screen.</string>
    <string name="done">Done</string>
    <string name="notdone">Not</string>
    <string name="shiteibi">"Specify date.
Plurals in
comma"</string>
    <string name="impexp">Backup</string>
    <string name="importfile">UTF-8 Example export file</string>
    <string name="importing">Import...</string>
    <string name="exporting">Export...</string>
    <string name="imp">Import</string>
    <string name="exp">Export</string>
    <string name="exportmsg">"
Format is UTF-8
Tab delimited

File name
memo.txt
holiday.txt
daymemo.txt
iconhistory.txt"</string>
    <string name="importmsg">"
Format is UTF-8
Tab delimited

File name
memo.txt
holiday.txt
daymemo.txt
iconhistory.txt"</string>
    <string name="getumatu">"End of
Month"</string>
    <string name="getumatus">End of Month</string>
    <string name="icon">Icon</string>
    <string name="whichmonth">Which Week</string>
    <string name="contextmessage">※Date takes precedence.</string>
    <string name="todosearch">Search</string>
    <string name="addlongtouch">No Memo</string>
    <string name="sort1">StartDay</string>
    <string name="sort2">EndDay</string>
    <string name="sort3">Title</string>
    <string name="sort">Sort</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="FREE">Y</string>
    <string name="othertodo">etc</string>
    <string name="checkschedule">Please check the schedule.</string>
    <string name="noeditgoogle">No Edit Google Calendar</string>
    <string name="usegooglecalendar">Google Calendar</string>
    <string name="usegooglecalendarsummary">Use Google Calendar</string>
    <string name="time24">24Hour</string>
    <string name="time24summary">Display 24 Hours</string>
    <string name="item">Item</string>
    <string name="subitem">SubItem</string>
    <string name="number">Num</string>
    <string name="price">Price</string>
    <string name="check">chk</string>
    <string name="checkl">check</string>
    <string name="sum">Sum</string>
    <string name="newbtn">New</string>
    <string name="shopname">Shop Name</string>
    <string name="changename">ChangeName</string>
    <string name="currency">usd</string>
    <string name="currencytitle">CurrencyExchange</string>
    <string name="currencyselect">CurrencySelect</string>
    <string name="hex">HEX</string>
    <string name="oct">OCT</string>
    <string name="bin">BIN</string>
    <string name="round">Round</string>
    <string name="ceil">Up</string>
    <string name="floor">Down</string>
    <string name="directinput">Direct input</string>
    <string name="nomal" />
    <string name="display">Display</string>
    <string name="toresult">To Result...</string>
    <string name="weight">weight</string>
    <string name="products">Products</string>
    <string name="pricedecimalpoint">Price Decimal point</string>
    <string name="pricedecimalpointsummary">Price Decimal point</string>
    <string name="sumprice">Receipt Price</string>
    <string name="editbuy">Copy/Move</string>
    <string name="deletebuy">Delete</string>
    <string name="calc">Calc</string>
    <string name="copysumprice">Copy to Receipt Price?</string>
    <string name="graph">Graph</string>
    <string name="inputeasy">Input Receipt Price</string>
    <string name="inputeasysummary">Input Receipt Price</string>
    <string name="list">List</string>
    <string name="color">Color</string>
    <string name="colorsummary">Select Color</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibratesummary">Vibrate ON/OFF</string>
    <string name="mail">Mail</string>
    <string name="yoteiicon">Schedule Icon</string>
    <string name="yoteiiconsummary">Select Schedule Icon</string>
    <string name="standbyoff">Standby OFF</string>
    <string name="standbyoffsummary">Checked,Not Standby</string>
    <string name="tagtitle">Tag</string>
    <string name="seektitle">Seek</string>
    <string name="insert">Insert</string>
    <string name="stroke">Stroke</string>
    <string name="notUndo">"Can't Undo"</string>
    <string name="mailpic">Mail Picture Format</string>
    <string name="mailpicsummary">Select PNG or JPEG</string>
    <string name="passwordsettingtitle">Password Setting</string>
    <string name="passwordinputtitle">Password</string>
    <string name="password">password</string>
    <string name="repassword">retype</string>
    <string name="passwordinfo">"Empty password if you don't use password"</string>
    <string name="passwordconfirm">Password Verification</string>
    <string name="mark">Mark</string>
    <string name="mark2">Mark2</string>
    <string name="close">Close</string>
    <string name="moveprev">Do you move this memo on the previous day?</string>
    <string name="movenext">Do you move this memo on the next day?</string>
    <string name="reminder">Reminder</string>
    <string name="dateformat">MMMMM yyyy</string>
    <string name="sticky">Sticky</string>
    <string name="keyday">keyday</string>
    <string name="note">note</string>
    <string name="wallpapermsg">Change Wallpaper?</string>
    <string name="all">All</string>
    <string name="memo">Memo</string>
    <string name="tag">Tag</string>
    <string name="helpselectmark">Selected Mark, Tap the date on the calendar!</string>
    <string name="gallerydisp">View the Gallery</string>
    <string name="gallerydispsummary">Saved images will display in the Gallery.</string>
    <string name="settingmark">Setting Mark</string>
    <string name="selectall">All Select</string>
    <string name="selectnoall">All No Select</string>
    <string name="sdcopy">Copy to SD card</string>
    <string name="sdcopysummary">If the SD card to internal and external models such as the Galaxy, and then copy the backup.If it is not divided into internal and external, there is no need to use.</string>
    <string name="sdcopytoout">From Machine, Copy to SD card external</string>
    <string name="sdcopyfromout">From external SD card, Copy to the Machine</string>
    <string name="coping">Copy...</string>
    <string name="recovery">Recovery</string>
    <string name="recovery0">*Since the data is deleted, to use Please note.</string>
    <string name="recovery1">Return to the previous data</string>
    <string name="recovery2">Revert to a previous version up</string>
    <string name="recovery3">Revert to a previous version up before the two</string>
    <string name="execMsg">Are you sure you want to run?</string>
    <string name="netbackup">NetBackup</string>
    <string name="msgnetbackup">"You can backup data to Google Drive or Dropbox.
 *Please install either software from the market.
 Backup will be proceeded after tapping OK.
 Select Google Drive or Dropbox from the list of applications when finished the backup and end the backup.
 
Restoring: select the backup file from the app you backed up.
 
BackupFileName"</string>
    <string name="exeing">Running...</string>
    <string name="netrecover">Net Recover</string>
    <string name="msgnetrecover">"Restore data with the selected backup file.
 Please note that the current data will be deleted with this process."</string>
    <string name="msgerrnetrecover">"Not able to restore files that have been selected. 
Please check your backup file."</string>
    <string name="stampc">Stamp Category</string>
    <string name="backgroundc">BackGround Category</string>
    <string name="recoveryreinstall">Found the last data. Are you going to use this data?</string>
</resources>
