<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting">
        <CheckBoxPreference android:title="@string/standbyoff" android:key="standbyoff_key" android:summary="@string/standbyoffsummary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/vibrate" android:key="vibrate_key" android:summary="@string/vibratesummary" android:defaultValue="true" />
        <ListPreference android:entries="@array/list_weekentries" android:title="@string/startweek" android:key="startweek_key" android:summary="@string/startweeksummary" android:defaultValue="0" android:dialogTitle="@string/startweek" android:entryValues="@array/list_weekentryvalues" />
        <ListPreference android:entries="@array/list_touchentries" android:title="@string/touchsensitivity" android:key="touchsensitivity_key" android:summary="@string/touchsensitivitysummary" android:defaultValue="3" android:dialogTitle="@string/touchsensitivity" android:entryValues="@array/list_touchentryvalues" />
        <CheckBoxPreference android:title="@string/gallerydisp" android:key="gallerydisp_key" android:summary="@string/gallerydispsummary" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>