<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:background="@android:color/white" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="0.0sp" android:stretchColumns="0,1">
        <TableRow>
            <RadioGroup android:orientation="horizontal" android:id="@id/radiogroupAscDesc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="2">
                <RadioButton android:textColor="@android:color/black" android:id="@id/radiobuttonAsc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/asc" />
                <RadioButton android:textColor="@android:color/black" android:id="@id/radiobuttonDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desc" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <RadioGroup android:orientation="horizontal" android:id="@id/radiogroupSort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="2">
                <RadioButton android:textColor="@android:color/black" android:id="@id/radiobuttonSort1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort1" />
                <RadioButton android:textColor="@android:color/black" android:id="@id/radiobuttonSort2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort2" />
                <RadioButton android:textColor="@android:color/black" android:id="@id/radiobuttonSort3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort3" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <Button android:id="@id/BtnOk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Ok" />
            <Button android:id="@id/BtnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Cancel" />
        </TableRow>
    </TableLayout>
</LinearLayout>