<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:background="@android:color/white" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="0.0sp" android:stretchColumns="0,1">
        <TableRow android:id="@id/TableRowTitle" android:background="#ff1e90ff">
            <Button android:id="@id/BtnRegist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/regist" />
            <Button android:id="@id/BtnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" />
        </TableRow>
        <TableRow>
            <RadioGroup android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/radioSeek" android:padding="10.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0sp" android:layout_span="2">
                <TextView android:textSize="15.0sp" android:textColor="@color/gray" android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/all" />
                <RadioButton android:id="@id/radiobtnAll" android:layout_width="30.0sp" android:layout_height="30.0sp" android:button="@drawable/radiobtn" />
                <TextView android:textSize="15.0sp" android:textColor="@color/gray" android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/memo" />
                <RadioButton android:id="@id/radiobtnMemo" android:layout_width="30.0sp" android:layout_height="30.0sp" android:button="@drawable/radiobtn" />
                <TextView android:textSize="15.0sp" android:textColor="@color/gray" android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tag" />
                <RadioButton android:id="@id/radiobtnTag" android:layout_width="30.0sp" android:layout_height="30.0sp" android:button="@drawable/radiobtn" />
            </RadioGroup>
        </TableRow>
        <TableRow>
            <EditText android:textSize="15.0sp" android:gravity="top" android:id="@id/EditTextSeek" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="1" android:text="" android:minLines="1" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
</LinearLayout>