<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/markmain" android:background="#fffff8dc" android:padding="0.0sp" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:gravity="center_vertical" android:id="@id/marksample" android:layout_width="30.0sp" android:layout_height="30.0sp" android:scaleType="fitXY" />
        <Button android:id="@id/BtnMark" android:padding="0.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0sp" android:text="@string/mark" android:layout_weight="1.0" />
        <Button android:id="@id/BtnMark2" android:padding="0.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0sp" android:text="@string/mark2" android:layout_weight="1.0" />
    </LinearLayout>
    <Button android:id="@id/BtnMarkClose" android:padding="0.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0sp" android:text="@string/close" android:width="1000.0dip" android:layout_weight="1.0" />
</LinearLayout>