<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:background="@android:color/white" android:padding="0.0sp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="0.0sp" android:stretchColumns="1" android:shrinkColumns="0,2">
        <TableRow android:id="@id/TableLayoutTitle" android:background="#ff1e90ff" android:layout_margin="0.0sp">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="3">
                <Button android:id="@id/BtnRegist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0sp" android:text="@string/regist" android:width="400.0dip" android:layout_weight="1.0" />
                <Button android:id="@id/BtnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0sp" android:text="@string/cancel" android:width="400.0dip" android:layout_weight="1.0" />
                <Button android:id="@id/BtnDelete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0sp" android:text="@string/delete" android:width="400.0dip" android:layout_weight="1.0" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</ScrollView>