<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/main" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff7c0000" android:id="@id/BtnRegist" android:background="@drawable/buttonedit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0sp" android:text="@string/regist" />
    <LinearLayout android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff7c0000" android:id="@id/BtnSelectAll" android:background="@drawable/buttonedit" android:layout_width="0.0sp" android:layout_height="wrap_content" android:layout_margin="5.0sp" android:text="@string/selectall" android:layout_weight="1.0" />
        <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff7c0000" android:id="@id/BtnSelectNoAll" android:background="@drawable/buttonedit" android:layout_width="0.0sp" android:layout_height="wrap_content" android:layout_margin="5.0sp" android:text="@string/selectnoall" android:layout_weight="1.0" />
    </LinearLayout>
    <GridView android:gravity="center" android:id="@id/gridview" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:horizontalSpacing="5.0dip" android:verticalSpacing="5.0dip" android:stretchMode="columnWidth" android:columnWidth="50.0dip" android:numColumns="auto_fit" />
</LinearLayout>