<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:background="@android:color/white" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="0.0sp" android:stretchColumns="1" android:shrinkColumns="0,1">
        <TableRow android:id="@id/TableRowTitle" android:background="#ff1e90ff">
            <LinearLayout android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="3">
                <Button android:id="@id/BtnRegist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0sp" android:text="Ok" android:width="400.0dip" android:layout_weight="1.0" />
                <Button android:id="@id/BtnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0sp" android:text="@string/cancel" android:width="400.0dip" android:layout_weight="1.0" />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:id="@id/TextviewHiduke" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/titlehiduke" />
            <Button android:id="@id/BtnHiduke" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" />
            <Button android:id="@id/BtnHidukeClear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear" android:layout_alignParentLeft="true" />
        </TableRow>
    </TableLayout>
</LinearLayout>