<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:background="@android:color/white" android:padding="1.0sp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="0.0sp" android:stretchColumns="1" android:shrinkColumns="0">
        <TableRow android:id="@id/TableRowTitle" android:background="#ff1e90ff" android:layout_margin="0.0sp">
            <LinearLayout android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="2">
                <Button android:id="@id/BtnOk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0sp" android:text="Ok" android:width="400.0dip" android:layout_weight="1.0" />
                <Button android:id="@id/BtnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0sp" android:text="@string/cancel" android:width="400.0dip" android:layout_weight="1.0" />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:id="@id/TextviewTitle" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/title" android:phoneNumber="false" />
            <AutoCompleteTextView android:textSize="15.0sp" android:gravity="top" android:id="@id/EditTextShop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="1" android:text="" android:completionThreshold="1" />
        </TableRow>
        <TableRow>
            <TextView android:textSize="15.0sp" android:textColor="@android:color/black" android:id="@id/TextviewContent" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/content" android:phoneNumber="false" />
            <EditText android:textSize="15.0sp" android:gravity="top" android:id="@id/EditTextContent" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="1" android:text="" android:minLines="4" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
</LinearLayout>